# gobus-mcp

./: .env.example  .gitignore  .mcp.json  404.html  CLAUDE.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.claude/skills/: gobus.md
.github/workflows/: deploy.yaml
_plan/: EXPERIMENTO_V2.md  PLANO.md  POLICY_ONTOLOGY.md
arquitetura/: index.html
casos-de-uso/: index.html
deploy/: index.html
docs/: arquitetura.md  casos-de-uso.md  deploy.md  index.md  quickstart.md
docs/prompts/: draft-press-release.md  monitor-agency.md  trace-entity.md  weekly-digest.md
docs/resources/: agencies.md  platform-stats.md  themes.md
docs/tools/: detect-trends.md  get-agency-analytics.md  get-article.md  get-entity-network.md  get-entity-profile.md  index.md  resolve-entity.md  search-news.md
experimentos/2026-06-24/: index.html
prompts/draft-press-release/: index.html
prompts/monitor-agency/: index.html
prompts/trace-entity/: index.html
prompts/weekly-digest/: index.html
quickstart/: index.html
resources/agencies/: index.html
resources/platform-stats/: index.html
resources/themes/: index.html
search/: search_index.json
src/gobus_mcp/: __main__.py  client.py  config.py  server.py
tests/: conftest.py
tests/test_resources/: test_health_pipelines.py  test_readability_dashboard.py  test_readability_report.py  test_resources.py  test_taxonomy_queries.py
tests/test_tools/: test_analytics_tools.py  test_detect_anomalies.py  test_entity_context_control.py  test_entity_network.py  test_entity_tools.py  test_forecast_trends.py  (+7 more)
tools/: index.html
(+41 files in other folders)
