[tool.poetry]
name = "gobus-mcp"
version = "0.1.0"
description = "MCP Server Gobus — interface de leitura unificada do Destaques Gov.BR via GraphQL"
authors = ["Nitai Bezerra da Silva <nitaibezerra@protonmail.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
fastmcp = "^2.0"
httpx = "^0.27"
pydantic = "^2.0"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.3"

[tool.poetry.scripts]
gobus-mcp = "gobus_mcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
